--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-.venv/
+.idea/
+.vscode/
+.venv*/
+venv*/
+__pycache__/
+dist/
+.coverage*
+htmlcov/
+.tox/
+docs/_build/
+.env
 
+venv/
+*.pyc
+*.sqlite
